fix z-index

--- a/src/styles/VideoHeader.css
+++ b/src/styles/VideoHeader.css
@@ -10,3 +10,7 @@
 .videoHeader > * {
   padding: 20px;
 }
+
+.videoHeader__icon {
+  z-index: 100;
+}
